Added JVM memory tuning info to extraspace inventory update script.